--- a/css/styles.css
+++ b/css/styles.css
@@ -321,6 +321,11 @@
     margin: 5px 0;
   }
 
+  input[type=text]:focus,input[type=email]:focus, textarea[type=text]:focus {
+  background: #000;
+  color: #fff;
+  border:1px solid #f1c111;
+}
   .captcha-group {
     margin: 15px 0 0 0;
     text-align: center;
